--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -75,6 +75,25 @@
 				</small>-->
 			</section>
 			<hr>
+			<style>
+				#ad {
+					width: 350px;
+				}
+				
+				@media (min-width: 320px) and (max-width: 480px) {
+					#ad {
+						max-width: 250px;
+					}
+				}
+			</style>
+			<center>
+				<a href="//oagnatch.com/4/4172017">
+					<img id="ad" src="https://cdn2.unrealengine.com/wows-1920x1080-5af17eac9c1a.png" alt="World of Warships">
+					<small>[ad] Jogue agora: World of Warships</small>
+				</a>
+			</center>
+			
+			<hr>
 			<footer>
 				<p>Encontrou algum bug, tem alguma dúvida ou sugestão? <a href="mailto:minha.ccontta@gmail.com">Me envie um email</a>.</p>
 			</footer>
