--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -118,10 +118,10 @@
 
 		<ul class="nav nav-tabs" id="tabs">
 			<li class="nav-item">
-				<a class="nav-link" id="popular">Popular</a>
+				<span class="nav-link" id="popular">Popular</span>
 			</li>
 			<li class="nav-item">
-				<a class="nav-link" id="news">Novas perguntas</a>
+				<span class="nav-link" id="news">Novas perguntas</span>
 			</li>
 		</ul>
 
