--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -56,6 +56,16 @@ $(function() {
 				display: block;
 				margin: auto;
 			}
+			.vid-container {
+				height: 20vw;
+				max-height: 300px;
+			}
+			.yt-vid {
+    			position: relative;
+    			width: 60%;
+    			height: 100%;
+				display: block;
+			}
 		</style>
 	</head>
 	<body>
@@ -132,6 +142,13 @@ $(function() {
 					</a>
 					<div class="card-body">
 						<p id="response-{{ response.id }}">{{ response.text|cut_description|safe|linebreaksbr }}</p>
+
+						{% if response.get_youtube_video %}
+							<div class="vid-container">
+								<iframe src="https://www.youtube.com/embed/{{ response.get_youtube_video }}?rel=0" class="yt-vid" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+							</div>
+							<br>
+						{% endif %}
 						
 						{% if response.image %}
 							<hr>
