--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -117,6 +117,14 @@ $(function() {
 					<hr>
 					<p>{{ question.description|cut_description|safe|linebreaksbr }}</p>
 					{% endif %}
+
+					{% if question.get_youtube_video %}
+					<div class="vid-container">
+						<iframe src="https://www.youtube.com/embed/{{ question.get_youtube_video }}?rel=0" class="yt-vid" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+					</div>
+					<br>
+					{% endif %}
+
 					{% if question.image %}
 					<center>
 						<hr>
