Youtube-vid responsiveness

--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -66,6 +66,17 @@ $(function() {
     			height: 100%;
 				display: block;
 			}
+		@media (min-width: 320px) and (max-width: 480px) {
+			.vid-container {
+				height: 50vw;
+				max-height: 300px;
+			}
+			.yt-vid {
+    			position: relative;
+    			width: 90%;
+    			height: 100%;
+				display: block;
+			}
 		</style>
 	</head>
 	<body>
