--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -256,7 +256,7 @@ $(function() {
       this.title = document.title;
       return true;
     } else { // webkit - safari/chrome
-      alert('Pressione ' + (navigator.userAgent.toLowerCase().indexOf('mac') != -1 ? 'Command/Cmd' : 'CTRL') + ' + D para favoritar essa página.');
+      alert('Pressione ' + (navigator.userAgent.toLowerCase().indexOf('mac') != -1 ? 'Command/Cmd' : 'CTRL') + ' + D para favoritar essa página. Ou, caso esteja no celular, procure pelo botão de favoritar de seu navegador.');
     }
   });
 });
