--- a/main_app/templates/notification.html
+++ b/main_app/templates/notification.html
@@ -19,6 +19,12 @@
                 width: 60%;
                 margin: 0 auto;
             }
+            .ntime {
+                color: #AAA;
+            }
+            .card-body {
+                padding-bottom: 8px;
+            }
 
             @media (min-width: 320px) and (max-width: 480px) {
                 .notifications {
@@ -66,7 +72,8 @@
             {% for notification in notifications %}
             <div class="card">
                 <div class="card-body">
-                    <p>{{ notification.text|safe }}</p>
+                    <p class="ntime">{{ notification.creation_date }}</p>
+                    <p class="ntext">{{ notification.text|safe }}</p>
                 </div>
             </div>
             {% endfor %}
