--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -26,21 +26,22 @@ $(function() {
 		responses = document.getElementById('responses')
 
 		new_user_response = document.getElementById('response-form').response.value
-		
-		new_innerHTML = '<div class="card"><a style="text-decoration: none; color: black;" href="/user/{{ user.username }}"><img src="{{ user_p.avatar.url }}" width="45px" alt="{{ user.username }}"> <span>{{ user.username }}</span></a><div class="card-body"><p>'+new_user_response+'</p></p>'
-		
+
+		new_innerHTML = '<li class="list-group-item"><a style="text-decoration: none; color: black;" href="/user/{{ user.username }}"><img src="{{ user_p.avatar.url }}" width="45px" alt="{{ user.username }}"> <span>{{ user.username }}</span></a><div class="card-body"><p>'+new_user_response+'</p></p>'
+
 		if (data['has_image']) {
 			url = data['image_url']
 			new_innerHTML += '<hr><img src="'+url+'" class="response-image" alt="Ocorreu um erro ao processar a imagem."><hr>'
 		}
-		
-		new_innerHTML += '<div class="heart-comment" id="like-counter-'+answer_id+'" onclick="like(this, '+answer_id+')"><img width="20px" src="/static/images/white-heart.png" class="icon"> <span>0</span></div>&nbsp;&nbsp;                   <div class="dropdown" id="options-dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</button>   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"><button class="dropdown-item" onclick="delete_response('+answer_id+'); this.parentElement.parentElement.parentElement.parentElement.remove()">Apagar</button><button class="dropdown-item" onclick="document.getElementById(`edit-response-form`).style.display=`block`">Editar</button></div>   </div>                  <div class="heart-comment">&nbsp;<img width="20px" src="/static/images/comments.png" class="icon" onclick="show_comments(this.parentElement, '+answer_id+', this.parentElement.getElementsByTagName(`img`)[0], `{{ csrf_token }}`, `{{ user.username }}`, {{ question.id }})"> <span class="comment">0</span><div class="comments" id="1"></div></div>                              </div></div>'
-		
+
+		new_innerHTML += '<div class="heart-comment" id="like-counter-'+answer_id+'" onclick="like(this, '+answer_id+')"><img width="20px" src="/static/images/white-heart.png" class="icon"> <span>0</span></div>&nbsp;&nbsp;                   <div class="dropdown" id="options-dropdown"><button class="btn btn-primary btn-sm dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Opções</button>   <div class="dropdown-menu" aria-labelledby="dropdownMenuButton"><button class="dropdown-item" onclick="delete_response('+answer_id+'); this.parentElement.parentElement.parentElement.parentElement.remove()">Apagar</button><button class="dropdown-item" onclick="document.getElementById(`edit-response-form`).style.display=`block`">Editar</button></div>   </div>                  <div class="heart-comment">&nbsp;<img width="20px" src="/static/images/comments.png" class="icon" onclick="show_comments(this.parentElement, '+answer_id+', this.parentElement.getElementsByTagName(`img`)[0], `{{ csrf_token }}`, `{{ user.username }}`, {{ question.id }})"> <span class="comment">0</span><div class="comments" id="1"></div></div>'
+		new_innerHTML += '<form id="edit-response-form" class="form-inline" method="post" action="/edit-response" onsubmit="document.getElementById(`response-'+answer_id+'`).innerHTML = this.response.value.replace(`\n`, `<br>`)">{% csrf_token %}<input type="hidden" name="response_id" value="'+answer_id+'"><textarea name="response" class="form-control">'+new_user_response+'</textarea><input class="btn btn-outline-primary" type="submit" value="Enviar"></form></li>'
 		responses.innerHTML += new_innerHTML
 
 		document.getElementById('response-form').remove()
 
-		responses.innerHTML += '<form id="edit-response-form" class="form-inline" method="post" action="/edit-response" onsubmit="document.getElementById(`response-'+answer_id+'`).innerHTML = this.response.value.replace(`\n`, `<br>`)">{% csrf_token %}<input type="hidden" name="response_id" value="'+answer_id+'"><textarea name="response" class="form-control">'+new_user_response+'</textarea><input class="btn btn-outline-primary" type="submit" value="Enviar"></form>'
+
+
 	});
 
 	$('#edit-response-form').ajaxForm(function(answer_id) {
@@ -65,6 +66,38 @@ $(function() {
     			width: 60%;
     			height: 100%;
 				display: block;
+			}
+			.card-body {
+				padding-bottom: 0.75rem;
+			}
+			.list-group-item {
+				/*Corrige BS*/
+				border: none;
+				border-top: 1px solid rgba(0,0,0,.125);
+			}
+			.list-group-item:focus, .list-group-item:hover {
+				/*Corrige BS*/
+				z-index: 0;
+			}
+			.responder-info {
+  				display: flex;
+				text-decoration: none;
+				color: black;
+			}
+			.responder-container {
+				margin-bottom: 15px;
+			}
+			.responder-profile-pic-container, .responder-text-container {
+  				display: flex;
+  				align-items: center;
+  				padding-right: 6px;
+			}
+			.response-pub-date {
+				color: #666;
+			}
+			.list-group-item {
+				padding-left: 0px;
+				padding-right: 0px;
 			}
 		@media (min-width: 320px) and (max-width: 480px) {
 			.vid-container {
@@ -153,13 +186,21 @@ $(function() {
 				</div>
 			</div>
 
-			<section id="responses">
+			<section class="card" id="responses">
+  				<div class="card-header">
+    				{{ question.total_responses }} respostas
+  				</div>
+				<ul class="list-group list-group-flush">
 				{% for response in responses %}
-				<div class="card">
-					<a style="text-decoration: none; color: black;" href="/user/{{ response.creator.user.username }}">
-						<img class="responder-profile-pic-popover" data-triger="hover" data-content="<img src='{{ response.creator.avatar.url }}' width='50px'><b> {{ response.creator.user.username }}</b><br><span>Pontos: {{ response.creator.points }}</span><p>{{ response.creator.bio }}</p>" data-placement="top" width="45px" src="{{ response.creator.avatar.url }}" alt="{{ response.creator.user.username }}"> <span>{{ response.creator.user.username }}</span>
-					</a>
+				<li class="list-group-item">
 					<div class="card-body">
+						<div class="responder-container">
+						<a class="responder-info" href="/user/{{ response.creator.user.username }}">
+							<div class="responder-profile-pic-container"><img class="responder-profile-pic-popover" data-triger="hover" data-content="<img src='{{ response.creator.avatar.url }}' width='50px'><b> {{ response.creator.user.username }}</b><br><span>Pontos: {{ response.creator.points }}</span><p>{{ response.creator.bio }}</p>" data-placement="top" width="45px" src="{{ response.creator.avatar.url }}" alt="{{ response.creator.user.username }}"></div>
+							<div class="responder-text-container"><div><span>{{ response.creator.user.username }}</span><br><span class="response-pub-date"> {{ response.get_naturaltime }}</span></div></div>
+
+						</a>
+						</div>
 						<p id="response-{{ response.id }}">{{ response.text|cut_description|safe|linebreaksbr }}</p>
 
 						{% if response.get_youtube_video %}
@@ -202,16 +243,17 @@ $(function() {
 							</div>
 						</div>
 					</div>
-				</div>
-				{% if response.creator.user.username == user.username %}
-				<form id="edit-response-form" class="form-inline" method="post" action="/edit-response" onsubmit="document.getElementById('response-{{ response.id }}').innerHTML = this.response.value.replace('\n', '<br>')">
-					{% csrf_token %}
-					<input type="hidden" name="response_id" value="{{ response.id }}">
-					<textarea name="response" class="form-control">{{ response.text }}</textarea>
-					<input class="btn btn-outline-primary" type="submit" value="Enviar">
-				</form>
-				{% endif %}
+					{% if response.creator.user.username == user.username %}
+					<form id="edit-response-form" class="form-inline" method="post" action="/edit-response" onsubmit="document.getElementById('response-{{ response.id }}').innerHTML = this.response.value.replace('\n', '<br>')">
+						{% csrf_token %}
+						<input type="hidden" name="response_id" value="{{ response.id }}">
+						<textarea name="response" class="form-control">{{ response.text }}</textarea>
+						<input class="btn btn-outline-primary" type="submit" value="Enviar">
+					</form>
+					{% endif %}
+				</li>
 				{% endfor %}
+				</ul>
 			</section>
 			{% if user.is_authenticated %}
 			{% if user_p.active %}
@@ -258,7 +300,7 @@ $(function() {
 			<div class="r-question">
 				<a href="/question/{{ question.id }}"><b>{{ question.text }}</b></a>
 				<br>
-				<small class="text-muted">perguntada {{ question.pub_date|naturaltime }} por <a href="/user/{{ question.creator.user.username }}">{{ question.creator.user.username }}</a></small>
+				<small class="text-muted">perguntada {{ question.get_naturaltime }} por <a href="/user/{{ question.creator.user.username }}">{{ question.creator.user.username }}</a></small>
 				<hr>
 			</div>
 			{% endfor %}
