Fix responder on hover em question.html

--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -78,9 +78,14 @@ $(function() {
 			.list-group-item:focus, .list-group-item:hover {
 				/*Corrige BS*/
 				z-index: 0;
+				text-decoration: none;
 			}
 			.responder-info {
   				display: flex;
+				text-decoration: none;
+				color: black;
+			}
+			.responder-info:hover {
 				text-decoration: none;
 				color: black;
 			}
