--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -160,7 +160,7 @@ $(function() {
 			<div class="card">
 				<div class="card-body">
 					<div class="poster-container">
-					<a class="poster-info" href="/user/{{ response.creator.user.username }}">
+					<a class="poster-info" href="/user/{{ question.creator.user.username }}">
 						<div class="poster-profile-pic-container"><img class="poster-profile-pic-popover" data-triger="hover" data-content="<img src='{{ question.creator.avatar.url }}' width='50px'><b> {{ question.creator.user.username }}</b><br><span>Pontos: {{ question.creator.points }}</span><p>{{ question.creator.bio }}</p>" data-placement="top" width="45px" src="{{ question.creator.avatar.url }}" alt="{{ question.creator.user.username }}"></div>
 						<div class="poster-text-container"><div><span>{{ question.creator.user.username }}</span><br><span class="response-pub-date"> {{ question.get_naturaltime }}</span></div></div>
 					</a>
