Adicionada a funcionalidade de alteração de senha.

--- a/main_app/templates/signin.html
+++ b/main_app/templates/signin.html
@@ -34,6 +34,8 @@
 			  </div>-->
 			  <button type="submit" class="btn btn-primary">Entrar</button>
 			</form>
+			
+			<p><a href="/reset-password"><br>Esqueci minha senha</a>.</p>
 		</div>
 		
 	</body>
