--- a/main_app/templates/edit-profile.html
+++ b/main_app/templates/edit-profile.html
@@ -62,6 +62,7 @@
 		{% if user.username == user_p.user.username %}
 		<hr>
 		<p>Seu email: {{ user.email }}</p>
+		<p><a href="/reset-password">Clique aqui</a> para alterar sua senha.</p>
 		{% endif %}
 	</body>
 </html>
