Possível fix no cacheing

--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -333,7 +333,7 @@ $(function() {
 			<p>Faça <a href="/signin?redirect=/question/{{ question.id }}">login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder esta pergunta.</p>
 			{% endif %}
 		</main>
-		<script src="/static/js/question.js"></script>
+		<script src="/static/js/question.js?v21.05.03"></script>
 		<div class="recommended">
 			<hr>
 			<h3 class="text-secondary">— Responda também —</h3>
