--- a/main_app/templates/change-password.html
+++ b/main_app/templates/change-password.html
@@ -1,33 +1,28 @@
 <!doctype html>
 <html lang="pt-br">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-		
-		<title>Alterar senha</title>
-		
-		<style>
-			#change-password-form {
-				width: 50%;
-				margin: auto;
-			}
-		</style>
-		
+<head>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+<title>Alterar senha</title>
+<style>
+	#change-password-form {
+		width: 50%;
+		margin: auto;
+	}
+</style>
 <script>
 function validate_form() {
 	form = document.getElementById('change-password-form')
-	
 	if (form.password1.value != form.password2.value) {
 		form.password2.classList.add('is-invalid')
 		return false
 	}
-	
 	return true
 }
 </script>
-	</head>
+</head>
+
 	<body>
 		<center>
 			<h1>Alterar senha</h1>
