--- a/main_app/templates/signup.html
+++ b/main_app/templates/signup.html
@@ -7,7 +7,7 @@
 		<meta name="keywords" content="Conta, asker, asker.fun, entrar, login, registrar">
 		<title>Criar uma conta</title>
 		
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 		
 		<link rel="stylesheet" href="/static/css/signup.css">
 	</head>
