--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,37 +1,27 @@
 {% load humanize %}
 {% load main_app_extras %}
 <!doctype html>
-<html>
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>Asker | Página inicial</title>
+<html lang="pt-br">
+<head>
+<title>Asker | Página inicial</title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
+<link rel="stylesheet" href="/static/css/index.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/infinite.min.js"></script>
+</head>
 
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-		<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">-->
-		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
-		<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
-
-
-		<!-- SCROLL INFINITO: -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/shortcuts/infinite.min.js"></script>
-
-
-		<link rel="stylesheet" href="/static/css/index.css">
-
-		<meta name="propeller" content="1b6f68062e9bcda64f6be0d18066ccb1">
-	</head>
 	<body>
 		<nav class="navbar navbar-expand-sm   navbar-light bg-light">
 		    <a id="logo" href="/" class="navbar-brand"><img src="/static/images/asker.png" height="40px" alt="Asker"></a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
 			</button>
-
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 					{% if user.is_authenticated %}
@@ -62,22 +52,17 @@
 			</div>
 		</nav>
 {{ account_verification_alert|safe }}
-
-
-
 <style>
 	#alert {
 		width: 50%;
 		margin: auto;
 	}
-
 	#hide-alert {
 		float: right;
 		border-bottom-style: solid;
 		border-bottom-width: 1px;
 		cursor: pointer;
 	}
-
 	#alert-elements {
 		display: none;
 	}
@@ -85,7 +70,6 @@
 		padding-left: 0px;
 		padding-right: 0px;
 	}
-
 	@media (min-width: 320px) and (max-width: 480px) {
 		#alert {
 			width: 100%;
@@ -125,9 +109,6 @@
 			alert_div.style.display = 'none'
 	}
 </script>
-
-
-
 		<ul class="nav nav-tabs" id="tabs">
 			<li class="nav-item">
 				<span class="nav-link" id="popular">Popular</span>
@@ -136,7 +117,6 @@
 				<span class="nav-link" id="news">Novas perguntas</span>
 			</li>
 		</ul>
-
 			<section class="card" id="n_questions">
 				<ul class="list-group list-group-flush infinite-container">
 					{% for question in questions %}
@@ -201,15 +181,12 @@
 					</li>
 					{% endfor %}
 				</ul>
-
   {% if questions.has_next %}
     <a class="btn btn-primary infinite-more-link" href="/news?page={{ questions.next_page_number }}">Próxima página</a>
   {% endif %}
 			</section>
-
 			<section class="card" id="p_questions">
 				<ul class="list-group list-group-flush infinite-container">
-
 				{% for question in popular_questions %}
 				<li class="list-group-item">
 					<div class="card-body">
@@ -236,10 +213,7 @@
 				{% endfor %}
 				<h5>Fim! <a href="/news">Clique aqui</a> para ver as novas perguntas.</h5>
 			</section>
-
 		<script src="/static/js/index.js"></script>
-
-
 <script>
 $(function() {
   $('#bookmarkme').click(function() {
@@ -255,7 +229,6 @@ $(function() {
     }
   });
 });
-
 function increasePoints() {
 	$.ajax({
 		url: '/increasePoints',
