--- a/main_app/templates/notification.html
+++ b/main_app/templates/notification.html
@@ -3,17 +3,13 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css">
 		<link href="https://fonts.googleapis.com/css?family=Raleway:400,500,500i,700,800i" rel="stylesheet">
-
 		<script src="https://kit.fontawesome.com/1f965a8b94.js"></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
         <title>Suas Notificações</title>
-
         <style>
             .notifications {
                 width: 60%;
@@ -33,7 +29,6 @@
             	flex: 1;
             	margin: 2px;
             }
-
             @media (min-width: 320px) and (max-width: 480px) {
                 .notifications {
                     width: 95%;
@@ -41,6 +36,7 @@
             }
         </style>
     </head>
+
     <body>
 
 		<nav class="navbar navbar-expand-sm   navbar-light bg-light">
