--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -55,7 +55,7 @@ $(function() {
 			}
 			.vid-container {
 				height: 20vw;
-				max-height: 300px;
+				max-height: 350px;
 			}
 			.yt-vid {
     			position: relative;
@@ -196,9 +196,9 @@ $(function() {
 					<p>{{ question.description|cut_description|safe|linebreaksbr }}</p>
 					{% endif %}
 
-					{% if question.get_youtube_video %}
-					<div class="vid-container">
-						<iframe src="https://www.youtube.com/embed/{{ question.get_youtube_video }}?rel=0" class="yt-vid" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+					{% if question.get_embedded_content %}
+					<div class="emb">
+						{{ question.get_embedded_content|safe }}
 					</div>
 					<br>
 					{% endif %}
@@ -237,9 +237,9 @@ $(function() {
 						</div>
 						<p id="response-{{ response.id }}">{{ response.text|cut_description|safe|linebreaksbr }}</p>
 
-						{% if response.get_youtube_video %}
-							<div class="vid-container">
-								<iframe src="https://www.youtube.com/embed/{{ response.get_youtube_video }}?rel=0" class="yt-vid" frameborder="0" allowfullscreen="allowfullscreen"></iframe>
+						{% if response.get_embedded_content %}
+							<div class="embedded-content">
+								{{ response.get_embedded_content|safe }}
 							</div>
 							<br>
 						{% endif %}
