Timestamp exato em pergs/resps

--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -94,7 +94,7 @@ $(function() {
   				align-items: center;
   				padding-right: 6px;
 			}
-			.response-pub-date {
+			.post-pub-date {
 				color: #666;
 			}
 			.list-group-item {
@@ -186,7 +186,7 @@ $(function() {
 					<div class="poster-container">
 					<a class="poster-info" href="/user/{{ question.creator.user.username }}">
 						<div class="poster-profile-pic-container"><img class="poster-profile-pic-popover" data-triger="hover" data-content="<img src='{{ question.creator.avatar.url }}' width='50px'><b> {{ question.creator.user.username }}</b><br><span>Pontos: {{ question.creator.points }}</span><p>{{ question.creator.bio }}</p>" data-placement="top" width="45px" src="{{ question.creator.avatar.url }}" alt="{{ question.creator.user.username }}"></div>
-						<div class="poster-text-container"><div><span>{{ question.creator.user.username }}</span><br><span class="response-pub-date"> {{ question.get_naturaltime }}</span></div></div>
+						<div class="poster-text-container"><div><span>{{ question.creator.user.username }}</span><br><span title="{{ question.pub_date }}" class="post-pub-date"> {{ question.get_naturaltime }}</span></div></div>
 					</a>
 					</div>
 
@@ -231,7 +231,7 @@ $(function() {
 						<div class="poster-container">
 						<a class="poster-info" href="/user/{{ response.creator.user.username }}">
 							<div class="poster-profile-pic-container"><img class="poster-profile-pic-popover" data-triger="hover" data-content="<img src='{{ response.creator.avatar.url }}' width='50px'><b> {{ response.creator.user.username }}</b><br><span>Pontos: {{ response.creator.points }}</span><p>{{ response.creator.bio }}</p>" data-placement="top" width="45px" src="{{ response.creator.avatar.url }}" alt="{{ response.creator.user.username }}"></div>
-							<div class="poster-text-container"><div><span>{{ response.creator.user.username }}</span><br><span class="response-pub-date"> {{ response.get_naturaltime }}</span></div></div>
+							<div class="poster-text-container"><div><span>{{ response.creator.user.username }}</span><br><span title="{{ response.pub_date }}" class="post-pub-date"> {{ response.get_naturaltime }}</span></div></div>
 
 						</a>
 						</div>
