--- a/main_app/templates/index.html
+++ b/main_app/templates/index.html
@@ -77,10 +77,11 @@
 				<p>
 					{% if question.description != '' %}{{ question.description|cut_description|safe|linebreaksbr }}{% endif %}
 				</p>
-				<small>{{ question.id|total_answers }} respostas <b>&middot; </b> <span class="text-muted"><img src="/static/images/white-heart.png" width="15px"> {{ question.total_likes }}</span></small>
+				<small>{% total_answers question.id %} respostas <b>&middot; </b> <span class="text-muted"><img src="/static/images/white-heart.png" width="15px"> {{ question.total_likes }}</span></small>
 				{% if user.is_authenticated %}
-					{% if user.username|answered:question.id %}
-				<span style="display: block"><b>Sua resposta:</b></span> {{ user.username|answer:question.id|linebreaksbr }}
+					{% answered user.username question.id as ANSWERED %}
+					{% if ANSWERED %}
+				<span style="display: block"><b>Sua resposta:</b></span> {% answer user.username question.id %}
 					{% else %}
 				<a style="display: block" href="/question/{{ question.id }}"><button class="btn btn-outline-primary">Responder</button></a>
 					{% endif %}
